--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,34 @@
+.heading
+{
+  background-color: black;
+  display: block;
+  color: white;
+  padding-left: 20px;
+}
+.form-control
+{
+  color: black;
+}
+.image-card
+{
+  height: 100%;
+  width: 100%;
+  border: solid black 1px;
+  margin-top: 20px;
+}
+.movie-card-image
+{
+  height: 300px;
+  width : 220px
+}
+.search-input
+{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 90%;
+  align-content: center;
+  margin-left: 10px;
+}
 .App {
   text-align: center;
 }
